Bug 1330731 - Insecure form warning popup min-width increased to 200px, old width has 4 lines of text wrap (ugly), this has 3 (less ugly). r=MattN
MozReview-Commit-ID: HSao2FEtx1S

UltraBlame original commit: e3e173383b3db84f80172accfaf985cf5902bd19

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -3914,6 +3914,23 @@ none
 }
 #
 PopupAutoComplete
+[
+firstresultstyle
+=
+"
+insecureWarning
+"
+]
+{
+min
+-
+width
+:
+200px
+;
+}
+#
+PopupAutoComplete
 >
 richlistbox
 >
